<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">AugmentedSzczecin</string>

    <string name="email_required">Nie podałeś adresu email</string>
    <string name="password_required">Nie podano hasła</string>
    <string name="repeat_pass_required">Powtórz hasło</string>
    <string name="wrong_email">Podano błędny adres email</string>
    <string name="wrong_password">Hasło za krótkie</string>
    <string name="different_passwords">Hasła nie są jednakowe</string>
    <string name="login_fail">Podano nieprawidłowy login lub hasło</string>
    <string name="user_exists">Do podanego adresu e-mail przypisane jest już konto</string>
    <string name="empty_register_form">Nie wypełniono formularza</string>
    <string name="empty_login_form">Nie wypełniono wszystkich pól</string>
    <string name="close">Zamknij</string>

    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Hasło</string>
    <string name="repeat_password_placeholder">Powtórz hasło</string>

    <string name="register_ready_button_text">Zarejestruj</string>
    <string name="back_button_text">Powrót</string>

    <string name="login_progress_dialog">Trwa logowanie...</string>
    <string name="register_progress_dialog">Trwa rejestracja...</string>

    <string name="new_account_button_text">Załóż konto</string>
    <string name="have_account">Masz już konto?</string>

    <string name="skip_button_text">Pomiń</string>

    <string name="register_header" tools:ignore="Typos">Załóż nowe konto</string>
    <!-- misspelling nowe -->

    <string name="login_with_fb">Zaloguj się przez FB</string>
    <string name="login_with_g">Zaloguj się przez G+</string>

    <string name="no_connection">Brak połączenia z internetem</string>
    <string name="connection_fail">Błąd połączenia z serwerem</string>

    <string name="login_button_start">Zaloguj się</string>
    <string name="login_button_text">Zaloguj</string>
    <string name="register_button_text">Zarejestruj się</string>
    <string name="about_button_text">O aplikacji</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_base">BaseActivity</string>

    <string name="home_screen_nearby">w pobliżu</string>
    <string name="home_screen_own_places">twoje miejsca</string>
    <string name="home_screen_add_poi">dodaj POI</string>
    <string name="home_screen_settings">ustawienia</string>
    <string name="home_screen_logout">wyloguj</string>
    <string name="home_screen_exit">wyjście</string>

    <string name="home_screen">Strona główna</string>
    <string name="map_2d">Mapa 2D</string>
    <string name="poi_list">Moje miejsca</string>

    <string name="toolbar_show">Pokaż</string>

    <string-array name="drawer_items">
        <item>W pobliżu</item>
        <item>Moje Miejsca</item>
        <item>Dodaj POI</item>
        <item>Ustawienia</item>
        <item>WYLOGUJ SIĘ</item>
    </string-array>

    <string-array name="drawer_items_not_logged">
        <item>W pobliżu</item>
        <item>Ustawienia</item>
        <item>WYJŚCIE</item>
    </string-array>

    <string-array name="title_section">
        <item>Mapa 2D</item>
        <item>AR</item>
        <item>Lista POI</item>
        <item>Wyloguj</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Dodaj POI</string>
    <string name="fill_all_fields">Wypelnij wszystkie pola</string>
    <string name="title">Tytuł</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="cancel">Anuluj</string>
    <string name="confirm">Zatwierdź</string>
    <string name="ok">OK</string>
    <string name="network_lost_title">Błąd</string>
    <string name="network_lost_description">Utracono połączenie z internetem</string>
    <string name="wifi_lost_title">Błąd</string>
    <string name="wifi_lost_description">WIFI/Transmisja danych wyłączona.</string>
    <string name="wifi_lost_settings">Ustawienia</string>
    <string name="wifi_lost_close">Zamknij</string>
    <string name="gps_lost_title">Błąd</string>
    <string name="gps_lost_description">GPS wyłączony</string>
    <string name="gps_lost_settings">Ustawienia</string>
    <string name="gps_lost_close">Zamknij</string>
    <string name="add">Dodaj</string>
    <string name="add_poi_missing_fields">Niepoprawnie wypełnione pola [%s], popraw formularz.</string>
    <string name="add_poi_success">Super, dodałeś punkt POI!</string>
    <string name="settings">Ustawienia</string>
    <string name="change">Zmień</string>
    <string name="confirm_delete_poi_message">Czy na pewno usunąć ten punkt?</string>
    <string name="delete">Usuń</string>
    <string name="navigate_to_poi">Nawiguj</string>
    <string name="cancel_navigation">Zakończ nawigację</string>
    <string name="poi_was_deleted">POI zostało usunięte</string>

    <string name="default_preview_name">Nieokreślona nazwa</string>
    <string name="default_preview_category">Nieznana kategoria</string>
    <string name="default_preview_description">Brak opisu.</string>marker_or_view_null_message
    <string name="preview_poi_load_error">Błąd pobierania informacji o poi.</string>

    <string name="unknownLastLocationMessage">Twoja ostatnia lokalizacja jest nieznana. Kontynuuj, aby podjąć próbę pobrania aktualnego położenia.</string>
    <string name="lastLocationTitle">Ostatnia lokalizacja</string>
    <string name="dialogContinue">Kontunuuj</string>
    <string name="tags">Tagi</string>
    <string name="street">Ulica</string>
    <string name="postal_code">Kod pocztowy</string>
    <string name="city">Miasto</string>
    <string name="street_number">Nr budynku</string>
    <string name="house_number">Nr lokalu</string>
    <string name="category">Kategoria</string>
    <string name="subcategory">Podkategoria</string>
    <string name="new_poi">Nowy punkt</string>
    <string name="description">Opis</string>

    <string name="search">Szukaj</string>
    <string name="search_name">Nazwa</string>
    <string name="search_tags">Tagi</string>
    <string name="search_street">Ulica</string>
    <string name="search_open">Aktualnie otwarte</string>
    <string name="search_category">Kategoria</string>

    <string-array name="category_array">
        <item>Kategoria</item>
        <item>Miejsca publiczne</item>
        <item>Firmy i usługi</item>
        <item>Znajomi</item>
        <item>Wydarzenia</item>
    </string-array>

    <string-array name="subcategory_array">
        <item>Podkategoria</item>
        <item>Szkoła</item>
        <item>Szpital</item>
        <item>Park</item>
        <item>Zabytek</item>
        <item>Muzeum</item>
        <item>Urząd</item>
        <item>Dworzec autobusowy</item>
        <item>Dworzec kolejowy</item>
        <item>Poczta</item>
        <item>Kościół</item>
    </string-array>

    <string name="server_cat_place">PLACE</string>
    <string name="server_cat_commercial">COMMERCIAL</string>
    <string name="server_cat_person">PERSON</string>
    <string name="server_cat_event">EVENT</string>
    <string name="server_subcat_school">SCHOOL</string>
    <string name="server_subcat_hospital">HOSPITAL</string>
    <string name="server_subcat_park">PARK</string>
    <string name="server_subcat_monument">MONUMENT</string>
    <string name="server_subcat_museum">MUSEUM</string>
    <string name="server_subcat_office">OFFICE</string>
    <string name="server_subcat_bus_station">BUS_STATION</string>
    <string name="server_subcat_train_station">TRAIN_STATION</string>
    <string name="server_subcat_post_office">POST_OFFICE</string>
    <string name="server_subcat_church">CHURCH</string>

    <string-array name="paid_array">
        <item>Płatne/Bezpłatne</item>
        <item>Płatne</item>
        <item>Bezpłatne</item>
    </string-array>

    <string name="no_pois_found_title">Nie znaleziono :(</string>
    <string name="no_pois_found_content">Upewnij się, że nie popełniłeś błędów w pisowni.</string>
    <string name="search_error">Podczas wyszukiwania wystąpił błąd.</string>
    <string name="search_empty_form">Nie uzupełniono żadnego z pól!</string>

    <string name="address_header">Adres:</string>
    <string name="phone_header">Kontakt:</string>
    <string name="owner_header">Właściciel:</string>
    <string name="tag_header">Tagi:</string>
    <string name="www_header">Adres www:</string>
    <string name="fanpage_header">Fanpage:</string>
    <string name="opening_header">Godziny otwarcial:</string>
    <string name="phone_header">Link do wikipedia:</string>
    <string name="price_header">Cena:</string>
    
    <string name="price">Cena</string>
    <string name="to">Do:</string>
    <string name="from">Od:</string>
    <string name="opening_hours">Godziny otwarcia</string>
    <string name="sunday">Niedziela</string>
    <string name="saturday">Sobota</string>
    <string name="friday">Piątek</string>
    <string name="thursday">Czwartek</string>
    <string name="wednesday">Środa</string>
    <string name="tuesday">Wtorek</string>
    <string name="monday">Poniedziałek</string>
    <string name="opening_days">Dni otwarcia</string>
    <string name="fanpage">Fanpage</string>
    <string name="wikipedia_link">Link do wikipedia</string>
    <string name="phone">Telefon</string>
    <string name="www_address">Adres www</string>
    <string name="optional_fields">Pola opcjonalne</string>
</resources>
