<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:id="@+id/appLogo"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account_button_text"
        android:id="@+id/newAccountButton"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/red"
        android:background="@drawable/new_account_button_selector"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:width="@dimen/button_width" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/have_account"
        android:id="@+id/haveAccount"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/black" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button_text"
        android:id="@+id/loginButton"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/dark_blue"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:background="@drawable/start_login_button_selector"
        android:width="@dimen/button_width" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_button_text"
        android:id="@+id/skipButton"
        android:layout_gravity="center_horizontal"
        android:background="@null"
        android:textColor="@drawable/skip_text_selector"
        android:textAllCaps="false"
    />
</LinearLayout>