<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/confirm_poi_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/dividerVertical"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:padding="10dp"
        android:gravity="center"
        android:text="@string/confirm_delete_poi_message" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/acceptDeletePoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
            android:background="@drawable/preview_poi_toolbar_shape"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancelDeletePoi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/white"
            android:background="@drawable/preview_poi_toolbar_shape"
            android:text="@string/cancel" />
    </LinearLayout>
</LinearLayout>