<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/container">
    </FrameLayout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_screen_image_height"
            android:id="@+id/imageViewPager"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="@dimen/home_screen_label_height"
            android:id="@+id/nearby"
            android:text="@string/home_screen_nearby"
            android:textSize="@dimen/home_screen_label_size"
            android:clickable="true"
            android:layout_marginLeft="@dimen/home_screen_left_margin"
            android:layout_marginStart="@dimen/home_screen_left_margin"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_screen_label_height"
            android:id="@+id/own_places"
            android:text="@string/home_screen_own_places"
            android:textSize="@dimen/home_screen_label_size"
            android:clickable="true"
            android:layout_marginLeft="@dimen/home_screen_left_margin"
            android:layout_marginStart="@dimen/home_screen_left_margin" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_screen_label_height"
            android:id="@+id/add_poi"
            android:text="@string/home_screen_add_poi"
            android:textSize="@dimen/home_screen_label_size"
            android:clickable="true"
            android:layout_marginLeft="@dimen/home_screen_left_margin"
            android:layout_marginStart="@dimen/home_screen_left_margin" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_screen_label_height"
            android:id="@+id/settings"
            android:text="@string/home_screen_settings"
            android:textSize="@dimen/home_screen_label_size"
            android:clickable="true"
            android:layout_marginLeft="@dimen/home_screen_left_margin"
            android:layout_marginStart="@dimen/home_screen_left_margin" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/home_screen_label_height"
            android:id="@+id/logout"
            android:text="@string/home_screen_logout"
            android:textSize="@dimen/home_screen_label_size"
            android:clickable="true"
            android:layout_marginLeft="@dimen/home_screen_left_margin"
            android:layout_marginStart="@dimen/home_screen_left_margin" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>